# DC109118

bot-forge/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  spec_contract.json
bot-forge/.github/workflows/: ci.yml
bot-forge/agents/: generator.py  packager.py  planner.py  retriever.py  reviewer.py  tester.py
bot-forge/core/: config.py  database.py  logging_setup.py  models.py  pipeline.py
bot-forge/examples/: cli-echo-bot.json  discord-echo-bot.json  telegram-echo-bot.json
bot-forge/templates/cli/: main.py.j2
bot-forge/templates/cli/bot/: handler.py.j2
bot-forge/templates/cli/tests/: test_handler.py.j2
bot-forge/templates/common/: .dockerignore.j2  .env.example.j2  .gitignore.j2  README.md.j2  config.py.j2  docker-compose.yml.j2  requirements.txt.j2
bot-forge/templates/common/bot/: __init__.py.j2  logger_setup.py.j2
bot-forge/templates/common/tests/: __init__.py.j2
bot-forge/templates/custom/: main.py.j2
bot-forge/templates/custom/bot/: handler.py.j2
bot-forge/templates/custom/tests/: test_handler.py.j2
bot-forge/templates/discord/: main.py.j2
bot-forge/templates/discord/bot/: handler.py.j2
bot-forge/templates/discord/tests/: test_handler.py.j2
bot-forge/templates/slack/: main.py.j2
bot-forge/templates/telegram/: main.py.j2
bot-forge/templates/web-api/: main.py.j2
bot-forge/tests/integration/: test_pipeline.py
bot-forge/tests/unit/: test_generator.py  test_models.py  test_planner.py  test_retriever.py  test_reviewer.py
bot-forge/ui/: api.py  cli.py
fitvision-ai/: README.md
(+17 files in other folders)
